<resources>
    <string name="app_name">PacE ClouD</string>

    <string name="base_url">http://123.136.26.98:8081</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">sign up</string>
    <string name="profile_image">Profile image</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="title_about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">Services</string>
    <string name="payment">Payment</string>
    <string name="support">Support</string>
    <string name="username">Username</string>
    <string name="signin">Sign In</string>
    <string name="sign_up_now"><u>Sign Up</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_out">Sign Out</string>
    <string name="get_sign_out">Get sign out from application</string>
    <string name="invalid_username_or_password">Invalid username or password!</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_activity">Dashboard shows an overview of users total activity</string>
    <string name="list_of_services">List of services that user is taking from us</string>
    <string name="user_payment">User payment history and processing</string>
    <string name="user_support">Support section for user</string>
    <string name="refresh_the_existing_ui">Refresh the existing UI</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="virtual_machine">Virtual Machine</string>
    <string name="copyright">All rights reserved. Copyright ©2019, Royal Green Ltd.</string>
    <string name="net_error_msg">Please check Your internet connection!</string>
    <string name="error_msg">Error occurred! Please try again.</string>
    <string name="success_msg">Successful</string>
    <string name="loading_msg">Please Wait…</string>
    <string name="timeout_msg">Can not connect to server!</string>
    <string name="empty_msg">Empty data found!</string>
    <string name="no_data_msg">No data found!</string>
    <string name="acc_successful">Account created successfully</string>
    <string name="user_not_active">User not activated!</string>
    <string name="vm_started_successfully">Started successfully</string>
    <string name="vm_can_not_be_started">VM can not be started, please try again later</string>
    <string name="vm_stopped_successfully">Stopped successfully</string>
    <string name="vm_can_not_be_stopped">VM can not be stopped, please try again later</string>
    <string name="vm_rebooted_successfully">Rebooted successfully</string>
    <string name="vm_can_not_be_rebooted">VM can not be rebooted, please try again later</string>
    <string name="vm_note_saved">Saved successfully</string>
    <string name="vm_note_not_saved">Note can not be saved, please try again later</string>
    <string name="no_deployment_found">No Deployment Found</string>
    <string name="running_vm">Running VM:</string>
    <string name="of">of</string>
    <string name="total_hour">Total Hour:</string>
    <string name="total_cost">Total Cost:</string>
</resources>
