<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/stop"
        android:icon="@drawable/ic_dashboard_gray_24dp"
        android:contentDescription="@string/dashboard_activity"
        android:title="Stop"
        app:showAsAction="always"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/reboot"
        android:icon="@drawable/ic_cloud_done_gray_24dp"
        android:contentDescription="@string/list_of_services"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:title="Reboot" />
    <item
        android:id="@+id/terminate"
        android:icon="@drawable/ic_monetization_on_gray_24dp"
        android:contentDescription="@string/user_payment"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:title="Terminate" />
    <item
        android:id="@+id/view"
        android:icon="@drawable/ic_mood_gray_24dp"
        android:contentDescription="@string/user_support"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:title="View" />
</menu>
