<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="#FFFFFFFF"
            xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/logo"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:padding="16dp"
                    app:srcCompat="@drawable/login_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="48dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxStrokeColor="@color/colorGrayVeryLight"
                    app:startIconDrawable="@drawable/ic_account_circle_gray_24dp"
                    app:startIconTint="@color/colorDarkGreen"
                    app:errorTextColor="@color/colorRed"
                    app:hintTextColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorGrayVeryLight"
                    android:layout_below="@id/logo"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryLight"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxStrokeColor="@color/colorGrayVeryLight"
                    app:endIconMode="password_toggle"
                    app:errorTextColor="@color/colorRed"
                    app:hintTextColor="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorGrayVeryLight"
                    app:startIconTint="@color/colorDarkGreen"
                    app:startIconDrawable="@drawable/ic_lock_gray_24dp"
                    android:layout_below="@id/textInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimaryLight"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/signin"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="@color/colorGreen"
                    app:cornerRadius="10dp"
                    android:layout_below="@id/textInputLayout2"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_height="match_parent"
                    android:layout_below="@id/loginButton"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp">

                <LinearLayout
                        android:id="@+id/view1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        android:background="@color/colorGrayVeryLight"
                        android:orientation="horizontal" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/or"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="@+id/or"
                        app:layout_constraintTop_toTopOf="@+id/or"/>

                <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OR"
                        android:textSize="16sp"
                        android:textColor="@color/colorYellow" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                        android:layout_marginTop="16dp"/>

                <LinearLayout
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="1dp"
                        android:background="@color/colorGrayVeryLight"
                        android:orientation="horizontal" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/or" android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/or"
                        app:layout_constraintTop_toTopOf="@+id/or"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUp"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_now"
                        android:textColor="@color/colorDarkGreen"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:cornerRadius="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/view1"
                        app:layout_constraintTop_toBottomOf="@+id/or" app:layout_constraintVertical_bias="0.0"
                        android:layout_marginTop="15dp"
                        app:layout_constraintEnd_toEndOf="@+id/view1" app:layout_constraintHorizontal_bias="0.0"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/forgotPassword"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textAllCaps="false"
                        android:textColor="@color/colorDarkGreen"
                        app:cornerRadius="10dp"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/view2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/or" app:layout_constraintVertical_bias="0.0"
                        android:layout_marginTop="15dp" app:layout_constraintStart_toStartOf="@+id/view2"
                        app:layout_constraintHorizontal_bias="1.0"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>
</layout>